js - linking user input to API call

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         ></textarea>
         <button class="btn btn-primary" id="interpret-btn">Interpret</button>
       </div>
-      <div class="result-box bg-secondary p-4 rounded" id="interpretation">
+      <div
+        class="result-box bg-secondary p-4 rounded text-capitalize"
+        id="interpretation"
+      >
         <!-- Interpretation will appear here -->
       </div>
       <hr class="bg-light" />
