hide interpretation area on start
 user experience improvement

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="btn btn-primary" id="interpret-btn">Interpret</button>
       </div>
       <div
-        class="result-box bg-secondary p-4 rounded text-capitalize"
+        class="result-box bg-secondary p-4 rounded text-capitalize hidden"
         id="interpretation"
       >
         <!-- Interpretation will appear here -->
