--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       </div>
       <hr class="bg-light" />
     </div>
-    <footer class="text-center mt-3">Made with ♡ by Jen DAUM</footer>
+    <footer class="text-center mt-3">
+      Made with ♡ by <b><a href="https://github.com/jen-daum">Jen DAUM</a></b>
+    </footer>
     <script src="src/script.js"></script>
   </body>
 </html>
