--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>✩ A.I interpreter ✩</title>
   </head>
   <body class="bg-dark text-light">
     <h1 class="text-center mt-5">
